@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 ifndef INST_PREF
-        INST_PREF=/tmp/ispcp-1.0.0
+        INST_PREF=/tmp/ispcp
 endif
 
 HOST_OS=debian
