@@ -1,5 +1,5 @@
 .ifndef INST_PREF
-INST_PREF=/tmp/ispcp-1.0.0
+INST_PREF=/tmp/ispcp
 .endif
 
 HOST_OS=freebsd
