@@ -99,7 +99,7 @@ Make sure you are logged in as root.
 	# ln -s /usr/local/libexec/makedatprog /usr/local/bin/makedatprog
 
 6. Copy all the directories into your system (you may make backups)
-	# cp -Rv /tmp/ispcp-1.0.0/* /
+	# cp -Rv /tmp/ispcp/* /
 
 7. Now it's time to set up the frontend. Change into the engine directory:
 	# cd /usr/local/www/apache22/ispcp/engine/setup
@@ -167,7 +167,7 @@ Make sure you are logged in as root.
 	# mkpop3dcert
 
 17. Clean the temporary folders:
-	# rm -fR /tmp/ispcp-1.0.0
+	# rm -fR /tmp/ispcp
 
 
 ================================================================================
@@ -222,17 +222,17 @@ Make sure you are logged in as root.
 	# make -f Makefile.inc install
 
 6. Save key files
-	# cp -v /usr/local/www/apache22/ispcp/engine/ispcp-db-keys.pl /tmp/ispcp-1.0.0/usr/local/www/apache22/ispcp/engine/
-	# cp -v /usr/local/www/apache22/ispcp/engine/messager/ispcp-db-keys.pl /tmp/ispcp-1.0.0/usr/local/www/apache22/ispcp/engine/messager/
-	# cp -v /usr/local/www/apache22/ispcp/gui/include/ispcp-db-keys.php /tmp/ispcp-1.0.0/usr/local/www/apache22/ispcp/gui/include/
+	# cp -v /usr/local/www/apache22/ispcp/engine/ispcp-db-keys.pl /tmp/ispcp/usr/local/www/apache22/ispcp/engine/
+	# cp -v /usr/local/www/apache22/ispcp/engine/messager/ispcp-db-keys.pl /tmp/ispcp/usr/local/www/apache22/ispcp/engine/messager/
+	# cp -v /usr/local/www/apache22/ispcp/gui/include/ispcp-db-keys.php /tmp/ispcp/usr/local/www/apache22/ispcp/gui/include/
 
 7. Copy /usr and /var directories into your system (you may make backups)
-	# cp -Rv /tmp/ispcp-1.0.0/usr/* /usr/
-	# cp -Rv /tmp/ispcp-1.0.0/usr/local/www/* /usr/local/www/
+	# cp -Rv /tmp/ispcp/usr/* /usr/
+	# cp -Rv /tmp/ispcp/usr/local/www/* /usr/local/www/
 
 8. Backup ispcp.conf and copy the /etc dircetory into your system (you may make backups):
 	# mv -v /etc/ispcp/ispcp.conf /etc/ispcp/ispcp.old.conf
-	# cp -Rv /tmp/ispcp-1.0.0/usr/local/etc/ispcp/* /usr/local/etc/ispcp
+	# cp -Rv /tmp/ispcp/usr/local/etc/ispcp/* /usr/local/etc/ispcp
 
 9. Now it's time to update your installation. Change into the engine directory:
 	# cd /usr/local/www/apache22/ispcp/engine/setup
@@ -246,7 +246,7 @@ Make sure you are logged in as root.
 	http://isp-control.net to solve the problem.
 
 12. Clean the temporary folders:
-	# rm -fR /tmp/ispcp-1.0.0
+	# rm -fR /tmp/ispcp
 
 ================================================================================
 6) FAQ
